# Aquarius

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
cwe/: __init__.py  engine.py
cwe/agents/: __init__.py  hypothesis.py  marathon.py
cwe/alignment/: __init__.py  drift.py  synchronizer.py
cwe/api/: __init__.py  app.py
cwe/cli/: __init__.py  main.py
cwe/counterfactual/: __init__.py  generator.py  models.py  prompts.py  report.py  simulator.py
cwe/ingestion/: __init__.py  log_parser.py  report_extractor.py  video_processor.py
cwe/models/: __init__.py  artifact.py  counterfactual.py  evidence.py  incident.py  timeline.py
cwe/physics/: __init__.py  collision.py  kinematics.py  validator.py
cwe/reasoning/: __init__.py  context_manager.py  function_schema.py  reasoner.py
cwe/reasoning/providers/: __init__.py  anthropic.py  base.py  gemini.py  openai.py  xai.py
docs/: ARCHITECTURE.md  COUNTERFACTUAL_GUIDE.md  DECISIONS.md  PROVIDERS.md  TIMELINE_CONSTRUCTION.md  VLM_FUNCTION_REFERENCE.md
examples/sample_incident/: README.md  incident_report.txt  vehicle_telemetry.jsonl
scripts/: demo_magic.py  test_counterfactual.py  test_counterfactual_mock.py  test_e2e.py  test_gemini_functions.py  test_gemini_video.py  test_real_world.py  test_with_video.py
tests/: __init__.py  test_alignment.py  test_models.py  test_physics.py
